--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ commands:
               "audience": "//iam.googleapis.com/projects/${WIP_PROJECT_NO}/locations/global/workloadIdentityPools/circleci-oidc/providers/circleci",
               "subject_token_type": "urn:ietf:params:oauth:token-type:jwt",
               "token_url": "https://sts.googleapis.com/v1/token",
-              "service_account_impersonation_url": "https://iamcredentials.googleapis.com/v1/projects/-/serviceAccounts/ci-sva@${WIP_PROJECT_ID}.iam.gserviceaccount.com:generateAccessToken",
+              "service_account_impersonation_url": "https://iamcredentials.googleapis.com/v1/projects/-/serviceAccounts/workload-identity@helical-gist-265910.iam.gserviceaccount.com:generateAccessToken",
               "credential_source": {
                 "file": "/tmp/oidc_access_token",
                 "format": {
